--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Psicanalista Gislene Oliveira - Guaratinguetá/SP</title>
+  <title>Psicanalista Gislene Oliveira</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Psicanalista Gislene Oliveira" />
-  <meta name="author" content="Agência WDK" />
+  <meta name="description" content="Como psicanalista, estou aqui para oferecer um espaço seguro e acolhedor onde você pode explorar suas questões e trilhar o caminho do autoconhecimento." />
+  <meta name="author" content="mrk.contact" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
   <link rel="stylesheet" href="./assets/vendor/css/owl.carousel.min.css">
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h1>Descobrindo novos horizontes <span>dentro de si!</span></h1>
+          <h1>Em busca de <span>autoconhecimento</span> e uma vida mais assertiva!</h1>
           <p>Olá! Seja muito bem vindo (a) a meu site! Este ambiente virtual é para que você possa entrar em contato com conteúdos sobre Psicanálise, também para me conhecer melhor e ao trabalho que estou desenvolvendo como psicanalista.</p>
           <a href="#" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/psicgislene/50min'});return false;" class="btn_solid"><i class="fi fi-rr-calendar"></i> Agendar Sessão</a>
           <a href="https://wa.me/5512997858309" target="_blank" class="btn_light mb-5 pb-5"><i class="fab fa-whatsapp"></i> Chamar no WhatsApp</a>
